Make sure media/template info does not overflow
References #230

--- a/templates/2k11/admin/style.css
+++ b/templates/2k11/admin/style.css
@@ -2257,6 +2257,7 @@ label .perm_name,
     box-sizing: border-box;
     color: #fcfcfc;
     height: 100%;
+    overflow: hidden;
     padding: .5em 1em;
     position: absolute;
     top: 0;
